[package]
name = "channel_est"
version = "0.1.0"
authors = ["Venkat Arun <venkatarun95@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transform_struct = { git = "https://github.com/venkatarun95/rust_transform_struct", version = "0.1.1" }
